removed excess white space and fixed loading images to have a hidden overflow

--- a/app/stylesheets/application.less
+++ b/app/stylesheets/application.less
@@ -34,12 +34,19 @@ a:hover { color: @blue_dark; }
 .thumbnail { border: 1px solid @blue_dark; } /* Flickr photo thumbnails */
 #user_menu .avatar { float: none; }
 
-/* #photos #gallery { height: 620px; } */
 #photos #slideshow, #photos #loading { text-align: center; }
 #photos #slideshow img { border: 4px double @blue_dark; padding: 2px; }
 #photos #loading { width: 500px; height: 500px; }
 #photos #caption { margin: 0 auto; float: none; }
-#photos #thumbs ul.thumbs { list-style-type: none; width: 800px; margin: 0 auto; padding: 0; }
+#photos #thumbs .pagination { padding: 0; margin: 0; }
+#photos #thumbs ul.thumbs {
+  list-style-type: none;
+  width: 800px;
+  height: 80px;
+  margin: 0 auto;
+  padding: 0; 
+  overflow-y: hidden;
+}
 #photos #thumbs ul.thumbs li a.thumb { float: left; margin: 0 5px 5px 0; padding: 0; }
 
 .photo_meta .avatar { float: left; margin: 0 5px 5px 0; padding: 1px; }
